# NeuroTrace-main

./: .gitignore  README.md
be/: README.md  pyproject.toml  requirements.txt  setup.py
be/examples/: main.py  medium_workflow_example.py  mock_example.py  simple_workflow_example.py  thinking_example.py
be/spectra/: __init__.py  spectra.py
fe/: .gitignore  README.md  package-lock.json  package.json  reset-on-startup.js  tailwind.config.ts
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/analytics/: page.tsx
fe/app/api/analyze/: route.ts
fe/app/api/get-agent-code/: route.ts
fe/app/api/get-analytics/: route.ts
fe/app/api/get-processed-logs/: route.ts
fe/app/api/process-logs/: route.ts
fe/app/api/reset-data/: route.ts
fe/app/components/: AgentCodeFlow.tsx  AgentDetails.tsx  RedTeamModal.tsx  Sidebar.tsx  WorkflowGraph.tsx  WorkflowNode.tsx
fe/app/dashboard/: page.tsx
fe/app/docs/: page.tsx
fe/app/help/: page.tsx
fe/app/lib/services/: redTeamService.ts
fe/app/lib/types/: redTeam.ts
fe/app/red-team/: page.tsx
fe/app/settings/: page.tsx
fe/app/vulnerabilities/: page.tsx
fe/components/ui/: alert.tsx  badge.tsx  card.tsx  input.tsx  scroll-area.tsx  tabs.tsx
